[gd_scene load_steps=3 format=2]

[ext_resource path="res://stages/Stage0.tscn" type="PackedScene" id=1]
[ext_resource path="res://stages/SceneSwitcher.gd" type="Script" id=2]

[node name="Scene_Switcher" type="Node"]
script = ExtResource( 2 )

[node name="StageContainer" type="Node" parent="."]

[node name="stageroot" parent="StageContainer" instance=ExtResource( 1 )]

[node name="Menu" type="ColorRect" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="Die_screen" type="ColorRect" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="Cutscene_Dialogue" type="ColorRect" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
